[package]
name = "ReBorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minhook = "0.3.0"
toy-arms = {git = "https://github.com/pseuxide/toy-arms"}
wchar = "0.11.0"
widestring = "1.0.2"

[lib]
crate-type = ["cdylib"]
